welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:6: error: not found: value inverse
	if ( x=="I" ) {  inverse();}
                         ^